--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </ul>
     </div>
     <div class="container">
-      <p>Hola Mundo, este es un cambio sincronizado con git y GitHub</p>
+      <p>Hola, este es un cambio sincronizado con git</p>
       <div class="actions">
         <button>Este es un botón verde ahora camiba a botón color Azul</button>
       </div>
